<resources>
    <string name="app_name">PaPa2</string>
    <string name="app_chinse_name">啪啪</string>
    <string name="abot_us_maintext">万千美模  贴心服务</string>

    <string name="onclick_exit">再按一次退出应用</string>
    <string name="agree_title">啪啪免责声明</string>
    <string name="agree_content">1、一切移动客户端用户在下载并浏览啪啪手机APP件时均被视为已经仔细阅读本条款并完全同意。凡以任何方式登陆本APP，或直接、间接使用本APP资料者，均被视为自愿接受本网站相关声明和用户服务协议的约束。
\n\n2、啪啪手机APP转载的内容并不代表啪啪手机APP之意见及观点，也不意味着本网赞同其观点或证实其内容的真实性。
\n\n3、啪啪手机APP转载的文字、图片、音视频等资料均由本APP用户提供，其真实性、准确性和合法性由信息发布人负责。啪啪手机APP不提供任何保证，并不承担任何法律责任。
\n\n4、啪啪手机APP所转载的文字、图片、音视频等资料，如果侵犯了第三方的知识产权或其他权利，责任由作者或转载者本人承担，本APP对此不承担责任。
\n\n5、啪啪手机APP不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该外部链接指向的不由啪啪手机APP实际控制的任何网页上的内容，啪啪手机APP不承担任何责任。
\n\n6、用户明确并同意其使用啪啪手机APP网络服务所存在的风险将完全由其本人承担；因其使用啪啪手机APP网络服务而产生的一切后果也由其本人承担，啪啪手机APP对此不承担任何责任。
\n\n7、除啪啪手机APP注明之服务条款外，其它因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的任何损失，啪啪手机APP概不负责，亦不承担任何法律责任。
\n\n8、对于因不可抗力或因黑客攻击、通讯线路中断等啪啪手机APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用啪啪手机APP，啪啪手机APP不承担任何责任，但将尽力减少因此给用户造成的损失或影响。
\n\n9、本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。
\n\n10、本网站相关声明版权及其修改权、更新权和最终解释权均属啪啪手机APP所有。\n\n
</string>

    <string name="reg">注册</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="over">完成</string>
    <string name="next_time">下次</string>
    <string name="update">马上更新</string>
    <string name="set_psd_tip">请设置密码(6-12位数字或字母)</string>
    <string name="set_psd_tip_agin">请再次输入密码</string>
    <string name="user_hint">输入用户名</string>
    <string name="psd_hint">输入密码</string>
    <string name="forget_psd">忘记了密码？</string>
    <string name="seemore">查看更多>></string>

    <string name="cancle_tip">取消</string>
    <string name="sure_tip">确定</string>
    <string name="key_tip">邀请码</string>
    <string name="my_order">我的订单</string>
    <string name="vip_list">会员特权</string>
    <string name="order_detail">订单详情</string>
    <string name="bill_detail">账单详情</string>
    <string name="pay_tip">支付</string>
    <string name="pay_method">支付方式</string>
    <string name="logout_tip">退出登录</string>
    <string name="logout_text">确定退出登录？</string>

    <string name="msg_tip">消息提醒</string>
    <string name="gesture_tip">手势密码</string>
    <string name="new_msg_tip">新消息提醒</string>
    <string name="ring_tip">提示音效</string>
    <string name="ring">铃声</string>
    <string name="vibrate">震动</string>
    <string name="setting">设置</string>
    <string name="commonproblem">常见问题</string>
    <string name="viprivileges">会员特权</string>
    <string name="mypriflesetting">个人资料</string>
    <string name="preference">预约筛选</string>
    <string name="verify">手机认证</string>
    <string name="vip_infor">会员信息</string>
    <string name="new_version">版本检测</string>
    <string name="about_usus">关于我们</string>
    <string name="clean_cache">清除缓存</string>
    <string name="get_key_type">获取钥匙的方法</string>
    <string name="key_title">钥匙获得</string>
    <string name="sign">签到</string>
    <string name="coupon">代金券</string>
    <string name="get_key_1">• 每日点击签到可以获得</string>
    <string name="get_key_2">• 成功消费，评价后可以获得</string>
    <string name="get_key_3">• 他人使用你的推荐码注册成功后可以获得</string>


    <string name="change">修改</string>
    <string name="balance">可用余额</string>
    <string name="my_balance">余额(元)</string>
    <string name="order_price">订单金额(元)</string>
    <string name="recharge">充值</string>
    <string name="need_price">实付金额</string>

    <string name="unionpay">银联卡</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信</string>


    <string name="pay_online">线上支付</string>
    <string name="pay_outline">线下支付</string>
    <string name="pay_cancle">取消订单</string>
    <string name="bankcard">银行卡</string>
    <string name="my_wallet">我的钱包</string>
    <string name="payMode">充值方式</string>
    <string name="my_bill_detail">账单明细</string>
    <string name="change_psd">修改登录密码</string>
    <string name="old_psd_hint">请输入旧密码</string>
    <string name="new_psd_hint">请输入新密码</string>
    <string name="repeat_psd_hint">重复新密码</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="username_iput">输入用户名</string>
    <string name="input_old_psd">输入旧密码</string>
    <string name="input_new_psd">输入新密码</string>
    <string name="input_new_psd_agin">重复新密码</string>

    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="new_psd">输入新密码</string>
    <string name="new_psd_agein">重复新密码</string>

    <string name="upload_item1">从相册选择</string>
    <string name="upload_item2">拍照</string>
    <string name="key_hint_skip">请输入6位邀请码(可跳过)</string>
    <string name="key_hint">请输入6位邀请码</string>

    <string name="location">位置</string>
    <string name="send_location">发送位置</string>
    <string name="so_short_tip">时间太短</string>
    <string name="my_profile_pic">头像</string>
    <string name="choose_pay">支付选择</string>

    <string name="rating">发表评价</string>
    <string name="tag_tip">请选择标签(最多三个)</string>
    <string name="psd_style">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="change_sus">修改成功</string>

    <!--异常-->
    <string name="no_orer_item">暂无订单</string>
    <string name="no_bill_item">暂无账单</string>
    <string name="vip_tip">VIP会员</string>
    <string name="no_voucher">您暂时没有代金券</string>
    <string name="no_rating">请先评分！</string>
    <string name="no_tag">请选择一个标签！</string>
    <string name="operate_fail">操作失败</string>
    <string name="getData_fail">服务器异常，请稍后再试</string>
    <string name="getData_out_time">网络超时，请稍后重试</string>
    <string name="no_network">暂无网络连接</string>
    <string name="download_image_fail">加载图片失败</string>
    <string name="nickname_error">昵称格式错误</string>
    <string name="not_digit">不能为纯数字</string>
    <string name="old_psd_type_error">旧密码格式错误</string>
    <string name="new_psd_type_error">新密码格式错误</string>
    <string name="repeat_psd_error">两次密码不一致</string>
    <string name="set_psd_error">密码长度不正确</string>
    <string name="no_sdCard">找不到SD卡</string>
    <string name="no_imgefile_fail">找不到图片文件</string>
    <string name="no_file_fail">找不到文件</string>
    <string name="send_fail">发送失败</string>
    <string name="no_newversion">当前已是最新版本</string>

    /*手机验证码*/
    <string name="input_mobile">手机号</string>
    <string name="input_verify">验证码</string>
    <string name="mobile_num">请输入手机号码</string>
    <string name="verify_cdoe">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_title">手机认证</string>
    <string name="mobile_style">0123456789</string>
    <string name="mobile_no_verify">未认证</string>
    <string name="mobile_verified">已认证</string>

    <string name="mobile_mobile_num_wrong">手机号码不对,请重新输入</string>
    <string name="mobile_num_show">***********</string>
    <string name="vip_get">未开通会员？ 立即开通</string>

    <string name="my_favarite">我的收藏</string>
    <string name="model_history_list">历史记录</string>
    <string name="tab_home">首页</string>

    <string name="no_model">无历史记录,去匹配一个模特吧</string>
    <string name="no_favorite_model">无收藏记录</string>
    <string name="no_place">无结果</string>

    <string name="delete_this_model">删除本条记录</string>
    <string name="cancel_this_model">取消收藏</string>
    <string name="mobile_is_exist">手机号码已存在</string>

    <string name="preference_age">年龄</string>
    <string name="preference_chooseage">请选择年龄</string>
    <string name="preference_height">身高</string>
    <string name="preference_chooseheight">请选择身高</string>
    <string name="preference_cup">罩杯</string>
    <string name="preference_feature">特点</string>
    <string name="action_send">发送</string>
    <string name="send_a_add">请选择一个地址</string>
    <string name="over_10item">收藏不能超过10个</string>
    <string name="record_failed">录制失败</string>
    <string name="country_choose">请选择国家</string>


    <string name="rating_voer">提交评价</string>
    <string name="entry">立即体验</string>
    <string name="surgest_hint">您如果有其他意见和建议，请放心填写</string>

    <string name="gusture_tip">手势密码输错3次，是否重新登陆</string>
    <string name="set_gesture">设置手势密码</string>
    <string name="illege_key_word_chat">为保证服务质量,请勿使用第三方沟通工具</string>
    <string name="skip">跳过</string>

    <string name="card_number_text">卡号</string>
    <string name="card_pin_text">密码</string>
    <string name="card_numberlen_text">18位卡号</string>
    <string name="card_pinlen_text">6位密码</string>
    <string name="card_pay_url_text">购卡地址：</string>
    <string name="card_pay_url">http://card.com</string>
    <string name="err_pay_cardwrong">卡号密码错误</string>


    <string name="final_pay">实付</string>
    <string name="vip_service">会员特权</string>
    <string name="discusspic">聊图</string>
    <string name="money_text">金额</string>
    <string name="pay_limite_money">单笔限额：5000</string>
    <string name="pay_cost_time">预计到账时间5分钟，请耐心等待</string>
    <string name="vip_service_item">服务项目</string>
    <string name="choose_pay_mothed">请选择支付方式</string>
    <string name="pay_over_max">单笔充值金额过大</string>
    <string name="pay_money">请输入大于50的金额</string>
    <string name="vip_pay_wallet">钱包支付</string>
    <string name="buy_vip">购买会员</string>
    <string name="buy_vip_tip">请确认购买</string>
    <string name="no_enough_money">余额不足，请返回充值，然后在购买会员(请进入个人中心->钱包->充值)</string>
    <string name="wallet_no_enough_money">钱包余额不足</string>
    <string name="enough_money">支付环境异常</string>
    <string name="clean_cache_success">清除缓存成功</string>


    <string name="drop_down_list_header_loading_text">加载中&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>

    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">已达到照片选择上限</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>

    <string name="open">打开APP</string>
    <string name="video_text">视频</string>
    <string name="cancal">取消</string>
    <string name="sure">确定</string>
    <string name="rechoose">此月份没有图片，请重新选择</string>

    <string name="howtopay">QQ/微信/支付宝 : 主页 -> 点击右上角 -> 点击扫一扫 -> 选择最右上角按钮 -> 选择 -> 从相册中选取二维码并支付</string>


    <string name="vip_privilege_introduce_text_one">黄金会员、体验黄金会员均可享受，观看影视内容无内置广告和病毒，为您省去时间。</string>
    <string name="vip_privilege_introduce_text_two">黄金会员、体验黄金会员均可享受，专享优先看绿色热门视频特权，无需担心病毒弹窗。</string>
    <string name="vip_privilege_introduce_text_thee">黄金会员、体验会员均可享受，可无限量下载保存美模套图，无网路也可欣赏。</string>
    <string name="vip_privilege_introduce_text_four">最前沿的高清VR大片，购买VR眼镜，即可享受视觉盛宴，同顶尖女优身临其境</string>
    <string name="vip_privilege_introduce_text_five">本功能目前正在维护中。</string>
    <string name="vip_privilege_introduce_text_six">数千部声优小故事、撩人歌曲点燃您的激情，助您释放、挥汗如雨，伴您酣然入睡。</string>
    <string name="vip_privilege_introduce_text_seven">足不出户，即可零距离同网红主播1V1互动，享受专属您个人的直播盛宴，由您定制，任您指挥。</string>
    <string name="vip_privilege_introduce_text_eight">实名认证模特上门，覆盖全国，绝对隐私、国内顶尖服务，让您流连忘返。终身黄金会员专享1V1售后回访。</string>
    <string name="vip_privilege_introduce_text_nine">在线客服：1V1专属客服，提供最人性、最完善、最贴心的服务，24H陪伴守候。高V专项：终身黄金会员享受客服热线优先接入特权。</string>
    <string name="vip_privilege_introduce_text_ten">只需一键转发，即可邀请好友参与体验极致视觉盛宴。 填写推荐人同享推荐优惠。无限分享，无限红包，红包可参与APP内任一消费，为您累积老司机娱乐资金。</string>


</resources>
