<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <LinearLayout
        style="@style/item_style"
        android:layout_marginTop="@dimen/top_margin12"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/username_iput"
            style="@style/main_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/edit_nickname"
            style="@style/normal_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/user_hint"
            android:maxLength="15"
            android:inputType="text" />
    </LinearLayout>

    <include layout="@layout/view_line" />

    <LinearLayout
        style="@style/item_style"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/new_psd"
            style="@style/main_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/edit_psd"
            style="@style/normal_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/set_psd_tip"
            android:inputType="textPassword"
            android:digits="@string/psd_style"
            android:maxLength="12" />
    </LinearLayout>

    <include layout="@layout/view_line" />

    <LinearLayout
        style="@style/item_style"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/new_psd_agein"
            style="@style/main_text_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/edit_psd_agin"
            style="@style/normal_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:hint="@string/set_psd_tip_agin"
            android:inputType="textPassword"
            android:digits="@string/psd_style"
            android:maxLength="12" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_next"
        style="@style/btn_pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/over" />

    <TextView
        android:id="@+id/agreement_text"
        style="@style/text_pink11"
        android:clickable="true"
        android:gravity="center"
        android:text="dfafdsafas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />
</LinearLayout>
