<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom_bank" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/view_age"
                style="@style/item_style_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin12">

                <TextView
                    style="@style/main_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/preference_age" />

                <TextView
                    android:id="@+id/text_age"
                    style="@style/main_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/preference_chooseage"  />
            </RelativeLayout>
            <include layout="@layout/view_line" />

            <RelativeLayout
                android:id="@+id/view_height"
                style="@style/item_style_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/main_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/preference_height" />

                <TextView
                    android:id="@+id/text_heigt"
                    style="@style/main_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/preference_chooseheight"  />
            </RelativeLayout>
            <include layout="@layout/view_line" />

            <LinearLayout
                style="@style/item_style_setting"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/main_text_14"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/preference_cup" />

                <com.bber.customview.FlowTagLayout
                    android:layout_marginLeft="@dimen/top_margin20"
                    android:id="@+id/cup_tag"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <include layout="@layout/view_line" />

            <LinearLayout
                style="@style/item_style_setting"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/main_text_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/preference_feature" />

                <com.bber.customview.FlowTagLayout
                    android:layout_marginLeft="@dimen/top_margin20"
                    android:id="@+id/feature_tag"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <include layout="@layout/view_line" />

            <Button
                android:id="@+id/btn_login"
                style="@style/btn_pink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin32"
                android:text="@string/over" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>