<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom" />

    <TextView
        style="@style/text_pink15"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/get_key_type" />

    <include layout="@layout/view_line" />

    <TextView
        style="@style/main_text_14"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/get_key_1" />

    <include layout="@layout/view_line" />

    <TextView
        style="@style/main_text_14"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/get_key_2" />

    <include layout="@layout/view_line" />

    <TextView
        style="@style/main_text_14"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:text="@string/get_key_3" />


    <RelativeLayout
        android:id="@+id/view_sign"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="@dimen/top_margin30"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/ima_circle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha="0.3"
            android:src="@drawable/main_circle_1" />

        <ImageView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/main_circle_bg" />

        <TextView
            android:id="@+id/sign_tip"
            style="@style/h1_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_tip"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/get_key_num"
                style="@style/title_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="3dp"
                android:drawableRight="@mipmap/key_big_icon"
                android:text="+0" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>